# esp32-s3-eye-birdnet

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
docs/: manifest.example.txt  species.txt  training.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  birdnet_config.h  idf_component.yml
main/audio/: audio_capture.c  audio_capture.h
main/dsp/: stft_frontend.c  stft_frontend.h
main/model/: birdnet_model.cc  birdnet_model.h  labels.c  labels.h  model_data.cc  model_data.h  model_registry.c  model_registry.h  occurrence_prior.h
main/net/: birdnet_time.c  birdnet_time.h
main/ui/: ui.c  ui.h
main/ui/assets/: roboto_18.c  roboto_28.c  roboto_30.c  roboto_pct_32.c
sdcard/birds/: ATTRIBUTION.txt
sdcard/models/: manifest.txt  plainfield74.tflite  plainfield74.tflite.run7bak  plainfield74.tflite.run8bak  plainfield74.tflite.run9bak  plainfield74.txt
tools/: convert_model.py
tools/birds/: make_bird_images.py  preview_bin.py
